--- a/public/client.html
+++ b/public/client.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>水墨小龙虾</title>
-    <link rel="stylesheet" href="/dist/css/cms/bundle.css">
+    <link rel="stylesheet" href="/dist/css/client/bundle.css">
   </head>
   <body>
     <div class="container">
     </div>
-    <script type="text/javascript" src="/dist/cms/index.js"></script>
+    <script type="text/javascript" src="/dist/client/index.js"></script>
   </body>
 </html>
